# flight-ibis-demo

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  t.sql
.github/workflows/: ci.yml
certbot/: run_certbot.sh
flight_client/src/: client.py  config.py
flight_client/src/examples/: client_cookbook_example.py
flight_server/src/: config.py  create_local_duckdb_database.py  data_logic.py  data_logic_duckdb.py  data_logic_ibis.py  server.py  server_cookbook_example.py
flight_server/src/examples/: server_arrow_example.py
helm-chart/: Chart.yaml  install_helm_chart.sh  values.yaml
helm-chart/secrets/opaque/: README.md
helm-chart/secrets/tls/: README.md
helm-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  http-service.yaml  ingress.yaml  secret.yaml  service.yaml  tls-secret.yaml
scripts/: start_flight_ibis_server.sh  test_flight_ibis.sh
src/flight_ibis/: client.py  config.py  constants.py  data_logic_ibis.py  server.py  spark_client_test.py
src/flight_ibis/examples/: server_cookbook_example.py
src/flight_ibis/setup/: create_local_duckdb_database.py  generate_localhost_tls_keypair.py  tls_utilities.py
