[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["./src"]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[project]
name = "flight-ibis"
version = "0.0.17"
description = "An Apache Arrow Flight server/client example powered by Ibis and DuckDB"
readme = "README.md"
authors = [{ name = "Philip Moore", email = "prmoore77@hotmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["flight-ibis", "flight", "ibis"]
dependencies = [
    "pyarrow==13.0.*",
    "click==8.1.*",
    "duckdb==0.9.*",
    "ibis-framework[duckdb]==7.0.*",
    "munch==4.0.*",
    "pyOpenSSL==23.2.*",
    "cryptography==41.0.*",
    "pyjwt==2.8.*",
    "codetiming==1.4.*",
    "pyspark==3.5.*",
    "urllib3==2.0.*"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["bumpver", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/voltrondata/flight-ibis-demo"

[project.scripts]
flight-server = "flight_ibis.server:run_flight_server"
flight-client = "flight_ibis.client:run_flight_client"
flight-spark-client = "flight_ibis.spark_client_test:run_spark_flight_client"
flight-data-bootstrap = "flight_ibis.setup.create_local_duckdb_database:create_local_duckdb_database"
flight-create-tls-keypair = "flight_ibis.setup.tls_utilities:create_tls_keypair"
flight-create-mtls-ca-keypair = "flight_ibis.setup.mtls_utilities:create_ca_keypair"
flight-create-mtls-client-keypair = "flight_ibis.setup.mtls_utilities:create_client_keypair"

[tool.bumpver]
current_version = "0.0.17"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{version}"$',
    '^current_version = "{version}"$',
]
"src/flight_ibis/__init__.py" = [
    '^__version__ = "{version}"$',
]
